# flexlay-netpanzer-map-editor

./: .env  .env.example  .gitignore  AUTHORS  AppRun  BUILD.md  INSTALL  NEWS  README  README.md  SConstruct  TODO  asan.supp  docker-compose.dev.yml  docker-compose.yml  make-appimage.sh  meson.build  netpanzer-editor.desktop
.github/workflows/: appimage.yml  c-cpp.yml  macos.yml  msvc.yml  msys2.yml
data/autotile/: generated.autotile.json  summer12mb.autotile.json
data/stamps/: base.stamp.json  base_river_border.stamp.json  diagonal_path_top_left_bottom_right.stamp.json  diagonal_path_top_left_bottom_right_02.stamp.json  diagonal_path_top_right_bottom_left_01.stamp.json  dirt.stamp.json  dirt_path_corner_SW.stamp.json  houses.stamp.json  lake_01.stamp.json  lakes.stamp.json  mountain_range_01.stamp.json  mountain_range_02.stamp.json  mountain_range_03.stamp.json  mountains.stamp.json  outpost.stamp.json  river_corner_NW.stamp.json  river_corner_SW.stamp.json  river_cross.stamp.json  river_horizontal_01.stamp.json  river_horizontal_02.stamp.json  river_vertical_01.stamp.json  river_vertical_02.stamp.json  rivers.stamp.json  roads.stamp.json  small_house.stamp.json  tree_small_group_01.stamp.json  trees.stamp.json  trees_round_01.stamp.json  trees_square_small_group.stamp.json  vertical_path_01.stamp.json
docs/: adding-tiles.md  autotile-format.md  generated-tileset.md  map-format.md
lib/: clanlib.i
lib/gui/: editor_map_component.cpp
netpanzer/: netpanzer-editor  netpanzer.cpp  netpanzer.rb
packaging/windows/: collect-dlls.sh  netpanzer-editor.iss
ruby/: flexlay.rb  ruby_functor.cpp  ruby_meta_data.hpp
src/: autotileset.cpp  autotileset.h  commands.h  main.cpp  mainwindow.cpp  mainwindow.h  maploader.cpp  maploader.h  mapview.cpp  mapview.h  minimap.cpp  minimap.h  npmformat.h  objects.h  stamp.h  stamppanel.cpp  stamppanel.h  style.qss  tilebrowser.cpp  tilebrowser.h  tilepanel.cpp  tilepanel.h  tlsloader.cpp  tlsloader.h
tests/: test_maploader.cpp  test_tlsloader.cpp
tools/: add_tile.py  derive_autotile_bitmasks.py  gen_river_water_transitions.py  generate_tile_viewer.py  generate_tileset.py  import_flexlay_brushes.py  replace_tile.py
